test/files/pos/bug137.scala
class A {
  type Two[A] = Tuple2[A, A];
  type TwoInt = Two[Int];
}
