test/files/neg/bug139.scala
abstract class A {
  type T;
}
class B extends A {
  type T[A] = Int;
}
